# cuda_practice

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CODEOWNERS  LICENSE  README.md
src/: main.cu
src/ch1/: CMakeLists.txt  cuda_utils.cuh  main.cu  vec_add.cu  vec_add.cuh
src/ch4/: CMakeLists.txt  check_prime_cpu.cpp  check_prime_cpu.h  check_prime_gpu.cu  check_prime_gpu.cuh  main.cu
src/shared/: CMakeLists.txt  cuda_utils.cuh
tests/ch1/: CMakeLists.txt  test_vec_add.cu
tests/ch4/: CMakeLists.txt  test_ch4.cu  test_check_prime_cpu.cpp  test_check_prime_gpu.cu
tests/shared/: CMakeLists.txt  test_cuda_utils.cu
